--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
         <nav>
             <ul>
                 <!-- <li class="link"><a href="#">Inicio</a></li> -->
-                <li class="link"><a href="#">Nosotros</a></li>
-                <li class="link"><a href="#">Productos</a></li>
-                <li class="link"><a href="#">Contáctanos</a></li>
+                <li class="link"><a class="link-item" href="#">Nosotros</a></li>
+                <li class="link"><a class="link-item" href="#">Productos</a></li>
+                <li class="link"><a class="link-item" href="#">Contáctanos</a></li>
             </ul>
         </nav>
     </header>
@@ -53,7 +53,7 @@
         </div>
     </main>
     <footer>
-        <span id="copyright">© Zhoemy creaciones 2020</span>
+        <span id="copyright">© Zhoemy creaciones 2021</span>
     </footer>
 </body>
 </html>
