--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <span id="text-logo">Zhoemy Creaciones</span>
             <nav>
                 <ul>
-                    <li class="link"><a class="link-item" href="#">Nosotros</a></li>
+                    <li class="link"><a class="link-item" href="#">Inicio</a></li>
                     <li class="link"><a class="link-item" href="#">Productos</a></li>
                     <li class="link"><a class="link-item" href="#">Contáctanos</a></li>
                 </ul>
