--- a/html/index.html
+++ b/html/index.html
@@ -23,6 +23,8 @@
     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
 
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+
     <title>Zhoemy</title>
 </head>
 <body>
@@ -38,7 +40,7 @@
             <ul>
                 <li class="link"><a class="link-item" href="#">Inicio</a></li>
                 <li class="link"><a class="link-item" href="#">Productos</a></li>
-                <li class="link"><a class="link-item" href="#">Contáctanos</a></li>
+                <li class="link"><a class="link-item" href="#">Contáctame</a></li>
             </ul>
         </nav>
     </div>
@@ -51,12 +53,27 @@
             <img src="/assets/images/marca.png" alt="marca" id="brand">
         </div>
     </div>
-    <!--
-    <div class="galery"> 
-        <h1>Galery</h1>
+    <div class="gallery"> 
+        <div id="title-gallery">
+            <h1>Productos</h1>
+        </div>
+        <div id="carousel">
+            <div id="before-img">
+                <i class="fas fa-chevron-left"></i>
+            </div>
+            <div id="carousel-item">
+                <div id="img-container"></div>
+                <div id="img-info">
+                    <p id="text-info"></p>
+                </div>
+            </div>
+            <div id="after-img">
+                <i class="fas fa-chevron-right"></i>
+            </div>
+        </div>
     </div>
     <div class="contact">
-        <p class="contact-title">Contáctame</p>
+        <h1 class="contact-title">Contáctame</h1>
         <p class="contact-item">Baltazara Rosa Zapata Coello</p>
         <p class="contact-item">rositazapata@gmail.com</p>
         <p class="contact-item">936679602</p>
@@ -67,7 +84,7 @@
             <img class="icons" src="/assets/icons/instagram.svg" alt="instagram">
         </div>
         <span id="copyright">© Zhoemy creaciones 2021</span>
-    </footer> -->
+    </footer>
 
     <script src="/js/main.js"></script>
 </body>
