menu and presentation responsive

--- a/html/index.html
+++ b/html/index.html
@@ -38,9 +38,9 @@
         </div>
         <nav id="menu" class="">
             <ul>
-                <li class="link"><a class="link-item" href="#">Inicio</a></li>
+                <li class="link"><a class="link-item" href="/html/index.html">Inicio</a></li>
                 <li class="link"><a class="link-item" href="#">Productos</a></li>
-                <li class="link"><a class="link-item" href="#">Contáctame</a></li>
+                <li class="link"><a class="link-item" href="#contact">Contáctame</a></li>
             </ul>
         </nav>
     </div>
@@ -55,7 +55,7 @@
     </div>
     <div class="gallery"> 
         <div id="title-gallery">
-            <h1>Productos</h1>
+            <h1>Mis productos</h1>
         </div>
         <div id="carousel">
             <div id="before-img">
@@ -71,8 +71,11 @@
                 <i class="fas fa-chevron-right"></i>
             </div>
         </div>
+        <div id="see-more">
+            <p>Ver más</p>
+        </div>
     </div>
-    <div class="contact">
+    <div class="contact" id="contact">
         <h1 class="contact-title">Contáctame</h1>
         <p class="contact-item">Baltazara Rosa Zapata Coello</p>
         <p class="contact-item">rositazapata@gmail.com</p>
@@ -80,8 +83,12 @@
     </div>
     <footer class="footer">
         <div class="container-icons">
-            <img class="icons" src="/assets/icons/facebook.svg" alt="facebook">
-            <img class="icons" src="/assets/icons/instagram.svg" alt="instagram">
+            <a href="https://www.facebook.com/zapatabalta" target="_blank">
+                <img class="icons" src="/assets/icons/facebook.svg" alt="facebook">
+            </a>
+            <a href="#">
+                <img class="icons" src="/assets/icons/instagram.svg" alt="instagram">
+            </a>
         </div>
         <span id="copyright">© Zhoemy creaciones 2021</span>
     </footer>
