--- a/html/index.html
+++ b/html/index.html
@@ -78,7 +78,7 @@
     <div class="contact" id="contact">
         <h1 class="contact-title">Contáctame</h1>
         <p class="contact-item">Baltazara Rosa Zapata Coello</p>
-        <p class="contact-item">rositazapata@gmail.com</p>
+        <p class="contact-item">zhoemy2217@gmail.com</p>
         <p class="contact-item">936679602</p>
     </div>
     <footer class="footer">
@@ -86,7 +86,7 @@
             <a href="https://www.facebook.com/zapatabalta" target="_blank">
                 <img class="icons" src="/assets/icons/facebook.svg" alt="facebook">
             </a>
-            <a href="#">
+            <a href="https://www.instagram.com/zhoemycreaciones/" target="_blank">
                 <img class="icons" src="/assets/icons/instagram.svg" alt="instagram">
             </a>
         </div>
