refactored all and added section of products

--- a/html/index.html
+++ b/html/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="/css/home.css">
+    <link rel="stylesheet" href="/css/menu.css">
+    <link rel="stylesheet" href="/css/footer.css">
 
     <link rel="apple-touch-icon" sizes="57x57" href="/assets/icons">
     <link rel="apple-touch-icon" sizes="60x60" href="/assets/icons/apple-icon-60x60.png">
@@ -39,7 +41,7 @@
         <nav id="menu" class="">
             <ul>
                 <li class="link"><a class="link-item" href="/html/index.html">Inicio</a></li>
-                <li class="link"><a class="link-item" href="#">Productos</a></li>
+                <li class="link"><a class="link-item" href="/html/products.html">Productos</a></li>
                 <li class="link"><a class="link-item" href="#contact">Contáctame</a></li>
             </ul>
         </nav>
@@ -72,7 +74,7 @@
             </div>
         </div>
         <div id="see-more">
-            <p>Ver más</p>
+            <a href="/html/products.html">Ver más</a>
         </div>
     </div>
     <div class="contact" id="contact">
@@ -90,9 +92,10 @@
                 <img class="icons" src="/assets/icons/instagram.svg" alt="instagram">
             </a>
         </div>
-        <span id="copyright">© Zhoemy creaciones 2021</span>
+        <span id="copyright">© Zhoemy Creaciones 2021</span>
     </footer>
 
-    <script src="/js/main.js"></script>
+    <script src="/js/menu.js"></script>
+    <script src="/js/galery_home.js"></script>
 </body>
 </html>
