added modal page for the products and restructured all the project

--- a/html/products.html
+++ b/html/products.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="/css/products.css">
     <link rel="stylesheet" href="/css/menu.css">
     <link rel="stylesheet" href="/css/footer.css">
+    <link rel="stylesheet" href="/css/contact.css">
 
     <link rel="apple-touch-icon" sizes="57x57" href="/assets/icons">
     <link rel="apple-touch-icon" sizes="60x60" href="/assets/icons/apple-icon-60x60.png">
@@ -25,6 +26,8 @@
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
+
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 
     <title>Zhoemy</title>
 </head>
@@ -49,6 +52,12 @@
         <h1 id="title-gallery">Mis productos</h1>
         <div id="container-gallery"></div>
     </div>
+    <div class="contact" id="contact">
+        <h1 class="contact-title">Contáctame</h1>
+        <p class="contact-item">Baltazara Rosa Zapata Coello</p>
+        <p class="contact-item">zhoemy2217@gmail.com</p>
+        <p class="contact-item">936679602</p>
+    </div>
     <footer class="footer">
         <div class="container-icons">
             <a href="https://www.facebook.com/zapatabalta" target="_blank">
@@ -60,6 +69,15 @@
         </div>
         <span id="copyright">© Zhoemy Creaciones 2021</span>
     </footer>
+
+    <div id="image-expand" class="">
+        <div id="image-expand-bg" class="">
+            <div id="image-expand-close" class="">
+                <i class="fas fa-times"></i>
+            </div>
+            <div id="image-expand-container" class=""></div>
+        </div>
+    </div>
 
     <script src="/js/menu.js"></script>
     <script src="/js/products.js"></script>
