--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </div>
         <nav id="menu" class="">
             <ul>
-                <li class="link"><a class="link-item" href="/html/index.html">Inicio</a></li>
+                <li class="link"><a class="link-item" href="index.html">Inicio</a></li>
                 <li class="link"><a class="link-item" href="/html/products.html">Productos</a></li>
                 <li class="link"><a class="link-item" href="#contact">Contáctame</a></li>
             </ul>
