resource direction change

--- a/index.html
+++ b/index.html
@@ -4,25 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <link rel="stylesheet" href="/css/home.css">
-    <link rel="stylesheet" href="/css/menu.css">
-    <link rel="stylesheet" href="/css/footer.css">
-    <link rel="stylesheet" href="/css/contact.css">
+    <link rel="stylesheet" href="./css/home.css">
+    <link rel="stylesheet" href="./css/menu.css">
+    <link rel="stylesheet" href="./css/footer.css">
+    <link rel="stylesheet" href="./css/contact.css">
 
-    <link rel="apple-touch-icon" sizes="57x57" href="/assets/icons">
-    <link rel="apple-touch-icon" sizes="60x60" href="/assets/icons/apple-icon-60x60.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="/assets/icons/apple-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="/assets/icons/apple-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="/assets/icons/apple-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="/assets/icons/apple-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="/assets/icons/apple-icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="/assets/icons/apple-icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="/assets/icons/apple-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192"  href="/assets/icons/android-icon-192x192.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/assets/icons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="/assets/icons/favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/assets/icons/favicon-16x16.png">
-    <link rel="manifest" href="/assets/icons/manifest.json">
+    <link rel="apple-touch-icon" sizes="57x57" href="./assets/icons">
+    <link rel="apple-touch-icon" sizes="60x60" href="./assets/icons/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="./assets/icons/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="./assets/icons/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="./assets/icons/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="./assets/icons/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="./assets/icons/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="./assets/icons/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="./assets/icons/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192"  href="./assets/icons/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./assets/icons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="./assets/icons/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./assets/icons/favicon-16x16.png">
+    <link rel="manifest" href="./assets/icons/manifest.json">
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
@@ -34,7 +34,7 @@
 <body>
     <div id="header" class="">
         <div id="logo">
-            <img src="/assets/images/knitting.svg" alt="logo" id="img-logo">
+            <img src="./assets/images/knitting.svg" alt="logo" id="img-logo">
             <span id="text-logo">Zhoemy Creaciones</span>
         </div>
         <div id="toggle-btn">
@@ -43,7 +43,7 @@
         <nav id="menu" class="">
             <ul>
                 <li class="link"><a class="link-item" href="index.html">Inicio</a></li>
-                <li class="link"><a class="link-item" href="/html/products.html">Productos</a></li>
+                <li class="link"><a class="link-item" href="./html/products.html">Productos</a></li>
                 <li class="link"><a class="link-item" href="#contact">Contáctame</a></li>
             </ul>
         </nav>
@@ -54,7 +54,7 @@
             <p id="text-sub">Amor y dedicación</p>
         </div>
         <div id="container-img">
-            <img src="/assets/images/marca.png" alt="marca" id="brand">
+            <img src="./assets/images/marca.png" alt="marca" id="brand">
         </div>
     </div>
     <div class="gallery"> 
@@ -76,7 +76,7 @@
             </div>
         </div>
         <div id="see-more">
-            <a href="/html/products.html">Ver más</a>
+            <a href="./html/products.html">Ver más</a>
         </div>
     </div>
     <div class="contact" id="contact">
@@ -88,16 +88,16 @@
     <footer class="footer">
         <div class="container-icons">
             <a href="https://www.facebook.com/zapatabalta" target="_blank">
-                <img class="icons" src="/assets/icons/facebook.svg" alt="facebook">
+                <img class="icons" src="./assets/icons/facebook.svg" alt="facebook">
             </a>
             <a href="https://www.instagram.com/zhoemycreaciones/" target="_blank">
-                <img class="icons" src="/assets/icons/instagram.svg" alt="instagram">
+                <img class="icons" src="./assets/icons/instagram.svg" alt="instagram">
             </a>
         </div>
         <span id="copyright">© Zhoemy Creaciones 2021</span>
     </footer>
 
-    <script src="/js/menu.js"></script>
-    <script src="/js/galery_home.js"></script>
+    <script src="./js/menu.js"></script>
+    <script src="./js/galery_home.js"></script>
 </body>
 </html>
